# peerjs-python

./: .gitignore  .gitpod.yml  CHANGELOG.md  README.md  SECURITY.md  cli.py  grep  http-proxy.py  run-dev.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pythonpackage.yml  pythonpublish.yml
.theia/: settings.json
src/: README.md  api.py  cli.py  dataconnection.py  enums.py  negotiator.py  peer-signaling.py  peer.py  setup.cfg  socket.py  util.py
src/peerjs/: api.py  baseconnection.py  dataconnection.py  enums.py  negotiator.py  peer.py  peerroom.py  pnpsignaling.py  servermessage.py  socket.py  util.py
src/peerjs/ext/: http-proxy.py  http_proxy.py
src/peerjspy/: api.py  baseconnection.py  cli.py  enums.py  servermessage.py
tests/: test_config.py
