[metadata]
name = peerjs
version = 1.0.2
author = Ivelin Ivanov
author_email = ivelin.ivanov@ambianic.ai
description = Python port of PeerJS client library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ambianic/peerjs-python
license = Apache Software License 2.0
classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	OSI Approved :: Apache Software License
	Operating System :: OS Independent
	TOPIC :: PEER TO PEER COMMUNICATION
	TOPIC :: WEBRTC
	TOPIC :: SOFTWARE DEVELOPMENT :: EMBEDDED SYSTEMS
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.7
install_requires = 
	aiortc>=0.9
	websockets>=8.1
	aiohttp>=3.6
	pyee>=6.0
	websockets>=8.1
	attrs>=19.3
	dataclasses_json>=0.3
	coloredlogs>=10.0
	msgpack>=0.6
	requests>=2.22

[coverage:run]
source = peerjs

[flake8]
ignore = E203,W503
max-line-length = 150

[isort]
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = peerjs
line_length = 88
multi_line_output = 3

[mypy]
disallow_untyped_calls = True
disallow_untyped_decorators = True
mypy_path = stubs
strict_optional = False

